# vaara

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  COMPLIANCE.md  CONTRIBUTING.md  LICENSE  LICENSING.md  MANIFEST.in  Makefile  OVERT_CONTROLS.md  OWASP_AGENTIC.md  PRIOR_ART.md  PRIVACY.md  README.md  RECOVERY.md  SECURITY.md  SPEC.md  TRADEMARK.md  VERDICTS.md  installs.json  llms.txt  pyproject.toml  requirements-dev.txt  restore.sh  server-vaara-server.json  server.json
.claude-plugin/: marketplace.json
.clusterfuzzlite/: Dockerfile  build.sh
.githooks/: pre-commit
.github/: CODEOWNERS  CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml  requirements-build.txt  secret_scanning.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-or-question.yml
.github/badges/: installs.json
.github/codeql/: codeql-config.yml
.github/workflows/: adversarial-eval.yml  cflite_batch.yml  cflite_cifuzz.yml  cflite_pr.yml  ci.yml  codeql.yml  downloads-badge.yml  pages.yml  release.yml  republish.yml  scorecard.yml
bench/: COMPARISON.md  README.md  adversarial_corpus.jsonl  build_corpus.py  latency.py  latency_fanout.py  latency_results.json  scorer_eval.py  v032_eval_final.json  v032_hparam_sweep.json  v032_per_category_test.json  v033_bge_base_eval.json  v033_eval_final.json  v034_eval_v3_cross.json  v034_eval_v5.json  v034_per_category_v3_at_T080.json  v034_per_category_v3_cross.json  v034_per_category_v5.json  v034_per_category_v5_at_T095.json  v035_eval_v3_cross.json  v035_eval_v6.json  v035_per_category_v3_cross.json  v035_per_category_v6.json  v036_eval_v6_holdout.json  v036_eval_v7_holdout.json  v036_eval_v7_v035test.json  v037_eval_v8_holdout.json  v038_phase1_eval_v8.json  v039_bipia_full_eval_v8_haiku.json  v039_bipia_full_eval_v8_llama.json  v039_bipia_full_eval_v8_mistral.json  v039_bipia_full_eval_v8_qwen.json  v039_bipia_pilot_eval_v8.json  v039_v9_eval.json  v040_fanout.json  v041_fanout.json  v046_fanout.json  vaara-bench-v0.31.md  vaara-bench-v0.32.md  vaara-bench-v0.33.md  (+9 more)
clients/macos/: AppIcon.icns  Package.swift  README.md  build.sh
clients/ts/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
conformance/: README.md
conformance/sep2828/: MANIFEST.json  run.py
deploy/docker/: Dockerfile
docs/: COMPLIANCE.md  OWASP_AGENTIC.md  PRIOR_ART.md  TRADEMARK.md  VERDICTS.md  adapters.md  architecture.md  article50-code-of-practice.md  attestation-conformance.md  audit_event_schema.md  conformal-prediction.md  conformance-profile.md  data-locality-profile.md  eidas-qel-profile.md  eu-ai-act-article-12.md  eu-ai-act-august-2026.md  execution-receipts.md  formal_specification.md  logs-vs-evidence.md  mit_ai_risk_repository_mapping.md  multi-replica-deployment.md  openapi.yaml  prove-what-an-ai-agent-did.md  qi_survey_mapping.md  sep2787-conformance.md  sep2787-overt-mapping.md  signing-keys.md  source-profile-contract.md  standards.md  tamper-evident-audit-trail.md  the-ai-act-deadline-that-didnt-move.md  vaara-audit-cli.md  vaara-vs-observability-vs-grc.md  verifying-evidence.md
docs/blog/: 01_langgraph_article_14_runtime_gate.md  02_action_governance_category.md  futurium_post_draft_20260420.txt  vaara_enterprise_brief.html
docs/design/: article12-export-spec.md  attestation-result-spec.md  (+14 more)
examples/: adversarial_classifier.py  anthropic_agent_loop.py  data_locality_demo.py  governance_demo.py  intercept.py  langchain_agent.py  quickstart.py
fuzz/: fuzz_audit_from_dict.py  fuzz_overt_envelope.py  fuzz_policy_loader.py
ietf/: .gitignore  Makefile  README.md  draft-sirkkavaara-vaara-receipt-00.txt  draft-sirkkavaara-vaara-receipt-00.xml  draft-sirkkavaara-vaara-receipt-04.xml  draft-sirkkavaara-vaara-receipt-05.txt  draft-sirkkavaara-vaara-receipt-05.xml  draft-sirkkavaara-vaara-receipt-06.txt  draft-sirkkavaara-vaara-receipt-06.xml
release-anchors/: README.md
scripts/: RELEASE.md  _v036_common.py  _v037_common.py  _v039_common.py  anchor_receipt_demo.py  anchor_release.py  audit_bipia_labels.py  build_conformance_corpus.py  build_conformance_statement_vectors.py  build_credential_grant_vectors.py  build_train_val_test_split.py  build_v037_split.py  build_v039_entries.py  build_v039_split.py  classifier_vs_heuristic.py  conformance_runner.py  consolidate.py  demo.tape  demo2.tape  demo_multiagent_attribution.py  e1_generate.py  e2_generate.py  eval_adversarial.py  eval_distribution_shift.py  eval_pair_attack.py  eval_per_category.py  eval_pipeline_attribution.py  eval_stack_ablation.py  eval_v032.py  eval_v036_holdout.py  eval_v037_holdout.py  eval_v038_phase1.py  eval_v039_bipia.py  eval_v039_v9.py  generate_decision_pairing_vectors.py  generate_evidence_ref_vectors.py  generate_matched_benign_v035.py  generate_receipt_vectors.py  generate_sep2787_attestation_vectors.py  generate_targeted_v034.py  (+35 more)
tests/: test_acp_vectors.py  test_adversarial_classifier_integration.py  test_agent_decision_vectors.py  test_agent_identity_vectors.py  test_anchor_endpoint.py  test_anchor_release.py  test_ap2_vectors.py  test_approvals.py  test_article12_export.py  test_article12_fold.py  test_article50.py  test_attestation_iap.py  test_attestation_overt.py  test_attestation_result.py  test_attestation_s3p.py  test_attestation_sep2787.py  test_attestation_sep2787_shape.py  test_attestation_sep2787_step5.py  test_attestation_sep2787_wire.py  test_attestation_tee.py  test_attestation_vectors.py  test_audit.py  test_audit_cli.py  test_audit_purge.py  test_audit_summary.py  test_build_bundle_cli.py  test_bundle_integrity.py  test_bundle_set.py  test_class_gate_vectors.py  test_claude_code_hook_runner.py  test_cli_anchor_providers.py  test_cli_attest_receipt_verify.py  test_cli_conformance_check.py  test_cli_default_menu.py  test_cli_proxy.py  test_cli_ux.py  test_cli_verify_contiguity.py  test_compliance.py  test_compliance_dashboard.py  test_compliance_render.py  (+125 more)
web/: index.html  robots.txt  sitemap.xml
webpage/: CNAME  index.html  llms.txt  robots.txt  sitemap.xml
(+820 files in other folders)
