[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vaara"
version = "0.4.2"
description = "Adaptive AI Agent Execution Layer — risk scoring, audit trails, regulatory compliance"
requires-python = ">=3.10"
license = "Apache-2.0"
readme = "README.md"
dependencies = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
keywords = ["ai", "agents", "governance", "risk", "compliance", "eu-ai-act", "conformal-prediction", "audit"]

[project.urls]
Homepage = "https://vaara.io"
Repository = "https://github.com/vaaraio/vaara"
Issues = "https://github.com/vaaraio/vaara/issues"
PyPI = "https://pypi.org/project/vaara/"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]
export = ["cryptography>=41.0"]

[project.scripts]
vaara = "vaara.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
