[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vaara"
version = "0.21.0"
description = "Adaptive AI Agent Execution Layer for risk scoring, audit trails, and regulatory compliance"
requires-python = ">=3.10"
license = "Apache-2.0"
readme = "README.md"
dependencies = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
keywords = ["ai", "ai-agents", "ai-governance", "agent-governance", "ai-act", "eu-ai-act", "article-14", "compliance", "audit-trail", "risk-scoring", "conformal-prediction", "overt", "attestation", "runtime-monitoring"]

[project.urls]
Homepage = "https://vaara.io"
Repository = "https://github.com/vaaraio/vaara"
Issues = "https://github.com/vaaraio/vaara/issues"
PyPI = "https://pypi.org/project/vaara/"
Demo = "https://huggingface.co/spaces/vaaraio/vaara"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff>=0.6.0",
    "hypothesis>=6.100",
    "bandit>=1.7.5",
    "mypy>=1.8",
]
export = ["cryptography>=41.0"]
ml = ["xgboost>=2.0", "scikit-learn>=1.3", "joblib>=1.3", "numpy>=1.24"]
yaml = ["pyyaml>=6.0"]
server = ["fastapi>=0.110", "uvicorn>=0.27"]
attestation = ["cbor2>=5.4", "cryptography>=41.0"]
pq = ["dilithium-py>=1.4.0"]
pdf = ["reportlab>=4.0"]
bedrock = ["boto3>=1.34"]
azure-content-safety = ["azure-ai-contentsafety>=1.0"]
gcp-model-armor = ["google-cloud-modelarmor>=0.1"]
nemo-guardrails = ["nemoguardrails>=0.10"]
guardrails-ai = ["guardrails-ai>=0.5"]
llm-guard = ["llm-guard>=0.3"]
rebuff = ["rebuff>=0.1"]

[project.scripts]
vaara = "vaara.cli:main"
vaara-audit = "vaara.audit_cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
vaara = ["data/*.joblib"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501", "E701", "E702"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]

[tool.bandit]
exclude_dirs = ["tests", "research", ".venv", "scripts"]
# B608 (SQL injection): every f-string SQL site in audit/sqlite_backend.py
# interpolates only the output of _tenant_clause(), which returns a literal
# constant string ("tenant_id = ?" with user value as a bound parameter, or
# "1=1"). User-supplied values always go through parameterised queries via
# the second arg to execute(). Bandit can't see the constraint, so the pattern
# trips B608 uniformly. False positive for our usage; revisit if any raw SQL
# starts interpolating non-literal values.
skips = ["B608"]

[tool.mypy]
# Default: lenient on legacy modules. Adopt strict typing module-by-module
# via [[tool.mypy.overrides]] entries below as each module is cleaned up.
ignore_missing_imports = true
python_version = "3.10"

[[tool.mypy.overrides]]
# vaara.policy is v0.6 surface — clean from day one. Future modules added
# under this strict block as they're typed.
module = "vaara.policy.*"
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
